frontend/test/should_fail/array_removeIf_exec_index_graph_element.grg
rule array_map_exec(ref a:array<int>) {
	modify {
		---
		exec({ aa:array<int> = a.removeIf{idx:Node -> value:int -> idx % 2 == 1} });
	}
}
